# turndown-py

./: .gitignore  CREDITS  README.md  pyproject.toml
src/turndown/: __init__.py  __version__.py  collapse_whitespace.py  commonmark_rules.py  html_parser.py  node.py  root_node.py  rules.py  service.py  utilities.py
tests/: conftest.py  test_internals.py  test_turndown.py
tests/fixtures/: cases.json
