[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turndown-py"
version = "2026.05.20"
description = "A Python port of Turndown — HTML to Markdown converter"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.7"
authors = [
  { name = "M-Intelligence" },
]
keywords = ["html", "markdown", "converter"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/M-Intelligence/turndown-py"
Source = "https://github.com/M-Intelligence/turndown-py"

[tool.hatch.build.targets.wheel]
packages = ["src/turndown"]

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pytest>=7.4.4",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py37"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.7"
strict = true
